Completed ice challenge
Co-authored-by: srikanthghse <srikanthghse@users.noreply.github.com>

--- a/ice/ice_1.html
+++ b/ice/ice_1.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="ice_1_style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ice Challenge 1</title>
+    <title>Ice Challenge 2</title>
 </head>
 <body>
-    <section>
-        <h1>Education</h1>
-        <p>Education is the difference between wishing you could help other &amp; being able to help them</p>
-    </section>
+    <div class="container">
+        <header>
+            <img id="frontend" src="images/w05_circles.jpg" alt="circles">
+        </header>
+        <main>
+            <img class="graphics" src="images/w05_ice_image_desk.jpg" alt="desk">
+            <img class="graphics" src="images/w05_ice_image_graphic.png" alt="graphic">
+            <img class="graphics" src="images/w05_ice_image_person.jpg" alt="person">
+        </main>
+    </div>
 </body>
 </html>
