Set footer links to open in new tab, removed underline, and set #content max-width to 1600px

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -59,10 +59,10 @@
         <footer>
             <p>Dry Oar &copy; 2024 - Joel Jensen</p>
             <p>
-                <a href="site_plan_rafting.html">Site Plan</a>
+                <a href="site_plan_rafting.html" target="_blank">Site Plan</a>
             </p>
             <p>
-                <a href="contactus.html">Contact Us</a>
+                <a href="contactus.html" target="_blank">Contact Us</a>
             </p>
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
