Added images and page descriptions

--- a/vesen-site/site-plan.html
+++ b/vesen-site/site-plan.html
@@ -125,29 +125,30 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        The landing page will consist of a simple, aesthetically pleasing directory of the music under several aliases. The landing page will visually introduce the user to the style and genre of the music, setting up the actual experience of listening to the music. The website will consist of a short biography of the musician, the origin of the music style, and the musician’s creative choices. Through the aesthetics of the page, the user will be able to obtain a deeper understanding of the music style and the emotions intended to be invoked by the music.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/Screenshot 2024-02-23 at 4.25.04 PM.png" alt="banner logo">
+        <img src="images/08breezy.jpeg" alt="08風 logo">
+        <img src="images/vesen.jpeg" alt="vesen logo">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>The music itself</h3>
       <p>
-        [Written copy for the Page 2 here]
+        People will come to this site to listen and gain access to original ambient acoustic and electronic music. By visiting this site users can expect to learn about the discography of my music, the timeline for that discography, and the style of the music. Activities that users will complete on this site mostly consist of listening to music or being linked to external sites where they can order physical copies of albums. Minimal information is required to complete any actions on this site, only a knowledge of what music is and a desire to explore a new genre. Visitors will come to this site for a more interactive UI, a greater understanding of the aesthetic approach to the genre, and free access to all the music in the form of streaming or downloads. As mentioned, the site will consist of music by the same person under two aliases. The music will be split up on the page according to which alias it was released under. Different links to different albums under different aliases will be present on the page allowing the user to better comprehend the alias choices and different style choices for different aliases. There will be links to each album where the user can listen to each song from the album in full, similar to a Spotify playlist. The website will accomplish this using HTML audio players. Included on each album’s page will be a link to download the music for free, and a link to an external site where they can purchase physical copies of the music in forms such as cassettes and CDs.  At the point when music videos are developed, the user can click on a link to individual songs that will take them to a page with a video player to see the music video.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/grove.jpeg" alt="grove album art">
+        <img src="images/sleep_paralysis.jpeg" alt="sleep paralysis album art">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Contacting the musician</h3>
       <p>
-        [Written copy for the Page 3 here]
+        The website will open up opportunities for other musicians or other potential partners to contact the musician for opportunities such as collaborations or publishing opportunities through the use of a contact page. The contact page will consist primarily of an email address, but will also include other safe forms of contacting the musician. In the footer, there will also be social media links to the musician's profiles on websites such as Twitter and Instagram, allowing the user to contact the musician through those methods if preferred. There will also be a link to the musician’s Spotify, Apple Music, SoundCloud, and Bandcamp profiles where they can listen on their preferred streaming platform on their mobile devices if so desired.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/email.png" alt="email">
+        <img src="images/insta.jpeg" alt="instagram">
 
       </ul>
       <hr>
