Added all three wireframes

--- a/vesen-site/site-plan.html
+++ b/vesen-site/site-plan.html
@@ -125,7 +125,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        The landing page will consist of a simple, aesthetically pleasing directory of the music under several aliases. The landing page will visually introduce the user to the style and genre of the music, setting up the actual experience of listening to the music. The website will consist of a short biography of the musician, the origin of the music style, and the musician’s creative choices. Through the aesthetics of the page, the user will be able to obtain a deeper understanding of the music style and the emotions intended to be invoked by the music.
+        About: Vesen is an experimental electronic/acoustic ambient artist with roots in dreampunk and vaporwave. (More descriptive information will be placed here once the wireframe is complete)
       </p>
       <p>Images for the Home page</p>
         <img src="images/Screenshot 2024-02-23 at 4.25.04 PM.png" alt="banner logo">
@@ -160,21 +160,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Because this webpage will be representing a single artist under two aliases with two styles, the homepage will consist of a directory to the two discographies of the two aliases.
       </p>
-      <img src="images/wireframe.png" alt="home page wireframe">
+      <img src="images/home_page_wireframe.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>08風 discography</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Will contain a list of all albums under this alias with the title above the album art
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/page_2_wireframe.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Vesen discography</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Will contain a list of all albums under this alias with the title above the album art
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/page_3_wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
