--- a/vesen-site/site-plan.html
+++ b/vesen-site/site-plan.html
@@ -10,9 +10,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
+      <h1>Vesen Site Plan</h1>
       <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h2>WDD 130</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -62,10 +62,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Montserrat]  <!-- change this -->
+        Heading Font: Montserrat  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Roboto]  <!-- change this -->
+        Paragraph Font: Roboto  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -100,10 +100,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          08 discography <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Vesen discography  <!-- change this -->
         </div>
 
         <div class="top">
