--- a/vesen-site/site-plan.html
+++ b/vesen-site/site-plan.html
@@ -31,7 +31,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/Screenshot 2024-02-23 at 4.25.04 PM.png" alt="Vesen logo">
+      <img src="images/logo.png" alt="Vesen logo">
       <hr>
       <h2>
         Style Guide
