--- a/vesen-site/site-plan.html
+++ b/vesen-site/site-plan.html
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#232531]</td><td class="secondary">[#0F1523]</td><td class="accent1">[#57606A]</td><td class="accent2">[#151828]</td></tr>
+        <tr><td class="primary">[#232531]</td><td class="secondary">[#032854]</td><td class="accent1">[#86878c]</td><td class="accent2">[#151828]</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
