--- a/wwr/index.html
+++ b/wwr/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="stlyes/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dry Oar Rafting | White Water Rafting for Adults and Families | Home</title>
@@ -28,7 +29,7 @@
                 <h1 class="home-title">Have an Adventure!</h1>
                 <h4>Make Memories With Dry Oar</h4>
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Book Now</a>
+                    <a class="book" href="contactus.html"><i class="fa-solid fa-book"></i> Book Now</a>
                 </div>
             </section>
         </div>
@@ -53,7 +54,7 @@
             <section class="msg">
                 <h2>More Than Just the Thrill</h2>
                 <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-                <a class="join" href="rivers.html">Join Us</a>
+                <a class="join" href="rivers.html"><i class="fa-solid fa-arrow-right-to-bracket"></i> Join Us</a>
             </section>
         </main>
         <footer>
