--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dry Oar Rafting | White Water Rafting for Adults and Families | Rivers</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="stlyes/rivers.css">
 </head>
 <body>
@@ -28,14 +29,14 @@
                 <h3 class="title">Main Fork of the Salmon River, Idaho</h3>
                 <img src="images/salmon_river.jpeg" alt="salmon river" class="image">
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Schedule Now</a>
+                    <a class="book" href="contactus.html"><i class="fa-regular fa-calendar-days"></i> Schedule Now</a>
                 </div>
             </section>
             <section class="desolation">
                 <h3 class="title">Desolation and Gray Canyon, Utah</h3>
                 <img src="images/desolation.jpeg" alt="green river" class="image">
                 <div class="button-box">
-                    <a class="book" href="contactus.html">Schedule Now</a>
+                    <a class="book" href="contactus.html"><i class="fa-regular fa-calendar-days"></i> Schedule Now</a>
                 </div>
             </section>
         </main>
