--- a/vesen-site/site-plan.html
+++ b/vesen-site/site-plan.html
@@ -125,7 +125,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        About: Vesen is an experimental electronic/acoustic ambient artist with roots in dreampunk and vaporwave. (More descriptive information will be placed here once the wireframe is complete)
+        About: Vesen, formerly known as 08風, is an experimental electronic/acoustic ambient artist from the frozen deserts of the western United States. The earliest influences on Vesen's work can be traced back to the internet micro-genre known as dreampunk, with artists such as 2814, HKE, t e l e p a t h, Chungking Mansions, Remember, Facechain, and more serving as his inspiration. Initially attempting to imitate the dreamy, heavy, cyberpunk sound of 2814, he soon found his style and skillset more suited to a spiritual, emotionally charged sound that attempted to paint the beauties of the world around him and the psychological landscapes within. After years of exploring these landscapes, the artist made an official departure from his old "08風" alias and adopted the new "Vesen", signifying his migration from electronic-oriented ambeince into a world of equally ambient acoustic sounds. Norwegian for "being", "Vesen" maintains the same surreal approach, but opts for a more wholistic sound, employing a blend of natural string instruments and electronic synthesizers.
       </p>
       <p>Images for the Home page</p>
         <img src="images/Screenshot 2024-02-23 at 4.25.04 PM.png" alt="banner logo">
@@ -133,23 +133,20 @@
         <img src="images/vesen.jpeg" alt="vesen logo">
 
       </ul>
-      <h3>The music itself</h3>
+      <h3>Original alias's music</h3>
       <p>
-        People will come to this site to listen and gain access to original ambient acoustic and electronic music. By visiting this site users can expect to learn about the discography of my music, the timeline for that discography, and the style of the music. Activities that users will complete on this site mostly consist of listening to music or being linked to external sites where they can order physical copies of albums. Minimal information is required to complete any actions on this site, only a knowledge of what music is and a desire to explore a new genre. Visitors will come to this site for a more interactive UI, a greater understanding of the aesthetic approach to the genre, and free access to all the music in the form of streaming or downloads. As mentioned, the site will consist of music by the same person under two aliases. The music will be split up on the page according to which alias it was released under. Different links to different albums under different aliases will be present on the page allowing the user to better comprehend the alias choices and different style choices for different aliases. There will be links to each album where the user can listen to each song from the album in full, similar to a Spotify playlist. The website will accomplish this using HTML audio players. Included on each album’s page will be a link to download the music for free, and a link to an external site where they can purchase physical copies of the music in forms such as cassettes and CDs.  At the point when music videos are developed, the user can click on a link to individual songs that will take them to a page with a video player to see the music video.
+        Grove/Lotus Sun
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/grove.jpeg" alt="grove album art">
-        <img src="images/sleep_paralysis.jpeg" alt="sleep paralysis album art">
-
+      <img src="images/grove.jpeg" alt="grove album art">
+      <img src="images/lotus-sun.jpeg" alt="lotus sun">
       </ul>
-      <h3>Contacting the musician</h3>
+      <h3>New alias's music</h3>
       <p>
-        The website will open up opportunities for other musicians or other potential partners to contact the musician for opportunities such as collaborations or publishing opportunities through the use of a contact page. The contact page will consist primarily of an email address, but will also include other safe forms of contacting the musician. In the footer, there will also be social media links to the musician's profiles on websites such as Twitter and Instagram, allowing the user to contact the musician through those methods if preferred. There will also be a link to the musician’s Spotify, Apple Music, SoundCloud, and Bandcamp profiles where they can listen on their preferred streaming platform on their mobile devices if so desired.
+        Sleep Paralysis
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/email.png" alt="email">
-        <img src="images/insta.jpeg" alt="instagram">
-
+        <img src="images/sleep_paralysis.jpeg" alt="email">
       </ul>
       <hr>
       <h2>
