updated section tags to div instead

--- a/vesen-site/index.html
+++ b/vesen-site/index.html
@@ -41,21 +41,21 @@
     </main>
     <footer>
         <div class="lunchbox">
-            <section class="contact">
+            <div class="contact">
                 <img src="images/vesen-footer.png" alt="vesen-footer">
                 <p class="footer-nav">&#169; 2024, Vesen</p>
                 <a href="" class="footer-nav">Contact</a>
                 <a href="site-plan.html" class="footer-nav">Site Plan</a>
-            </section>
+            </div>
         </div>
         <div class="tupperware">
-            <section class="social">
+            <div class="social">
                 <img src="images/insta.jpeg" class="social-media" alt="instagram" id="insta">
                 <img src="images/spotify.jpeg" class="social-media" alt="spotify" id="spotify">
                 <img src="images/Apple_Music_logo.png" class="social-media" alt="apple music" id="apple">
                 <img src="images/x.webp" class="social-media" alt="x" id="x">
                 <img src="images/soundcloud.jpeg" class="social-media" alt="soundcloud" id="sc">
-            </section>
+            </div>
         </div>
     </footer>
 </body>
