added css to vesen page

--- a/vesen-site/vesen-discography.html
+++ b/vesen-site/vesen-discography.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/vesen.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vesen Discography</title>
@@ -18,26 +19,30 @@
         </nav>
     </header>
     <main>
-        <h1>VESEN</h1>
+        <h1 id="vesen">VESEN</h1>
         <section class="album">
-            <h3>Sleep Paralysis</h3>
-            <img src="images/sleep_paralysis.jpeg" alt="sleep paralysis album art">
+            <h3 class="title">Sleep Paralysis</h3>
+            <a href="https://open.spotify.com/album/2liRaVQwmUJr187bQNOAg0?si=B_rzIYS3QpeNR4VBWT5ULQ" target="_blank"><img src="images/sleep_paralysis.jpeg" alt="sleep paralysis album art" id="sleep-paralysis-art"></a>
         </section>
     </main>
     <footer>
-        <section class="contact">
-        <img src="images/vesen-footer.png" alt="vesen-footer">
-            <p>&#169; 2024, Vesen</p>
-            <a href="">Contact</a>
-            <a href="site-plan.html">Site Plan</a>
-        </section>
-        <section class="social">
-            <img src="images/insta.jpeg" alt="instagram">
-            <img src="images/spotify.jpeg" alt="spotify">
-            <img src="images/Apple_Music_logo.png" alt="apple music">
-            <img src="images/x.webp" alt="x">
-            <img src="images/soundcloud.jpeg" alt="soundcloud">
-        </section>
+        <div class="lunchbox">
+            <div class="contact">
+                <img src="images/vesen-footer.png" alt="vesen-footer">
+                <p class="footer-nav">&#169; 2024, Vesen</p>
+                <a href="" class="footer-nav">Contact</a>
+                <a href="site-plan.html" class="footer-nav">Site Plan</a>
+            </div>
+        </div>
+        <div class="tupperware">
+            <div class="social">
+                <img src="images/insta.jpeg" class="social-media" alt="instagram" id="insta">
+                <img src="images/spotify.jpeg" class="social-media" alt="spotify" id="spotify">
+                <img src="images/Apple_Music_logo.png" class="social-media" alt="apple music" id="apple">
+                <img src="images/x.webp" class="social-media" alt="x" id="x">
+                <img src="images/soundcloud.jpeg" class="social-media" alt="soundcloud" id="sc">
+            </div>
+        </div>
     </footer>
 </body>
 </html>
