--- a/blh.html
+++ b/blh.html
@@ -2,13 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="blh.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <title>Document</title>
+    <title>Component</title>
 </head>
 <body>
-    <i class="fa-solid fa-ring" style="color:blue;font-size: 200px;"></i>
-    <i class="fa-solid fa-dice-d20" style="color: darksalmon;font-size: 300px;"></i>
-    <i class="fa-solid fa-weight-scale fa-spin" style="font-size: 200px;color: aqua;"></i>
+    <!-- Trigger the Modal -->
+    <img id="myImg" src="ice/ice-icon/images/lordfoogthe2st.jpg" alt="Hail Lord Foog" style="width:100%;max-width:300px">
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+    <!-- The Close Button -->
+    <span class="close">&times;</span>
+
+    <!-- Modal Content (The Image) -->
+    <img class="modal-content" id="img01">
+
+    <!-- Modal Caption (Image Text) -->
+    <div id="caption"></div>
+    </div>
+    <script src="blh.js"></script>
 </body>
 </html>
