Added links in the footer

--- a/vesen-site/vesen-discography.html
+++ b/vesen-site/vesen-discography.html
@@ -37,10 +37,10 @@
         <div class="tupperware">
             <div class="social">
                 <img src="images/insta.jpeg" class="social-media" alt="instagram" id="insta">
-                <img src="images/spotify.jpeg" class="social-media" alt="spotify" id="spotify">
-                <img src="images/Apple_Music_logo.png" class="social-media" alt="apple music" id="apple">
-                <img src="images/x.webp" class="social-media" alt="x" id="x">
-                <img src="images/soundcloud.jpeg" class="social-media" alt="soundcloud" id="sc">
+                <a href="https://open.spotify.com/artist/7eFhrORs8kftljzf6ARKkX?si=4qBpV_QRTiCo5wVAAJ-dRA" target="_blank"><img src="images/spotify.jpeg" class="social-media" alt="spotify" id="spotify"></a>
+                <a href="https://music.apple.com/us/artist/vesen/1722644914" target="blank"><img src="images/Apple_Music_logo.png" class="social-media" alt="apple music" id="apple"></a>
+                <a href="https://twitter.com/08bre_ezy" target="_blank"><img src="images/x.webp" class="social-media" alt="x" id="x"></a>
+                <a href="https://soundcloud.com/user-454061104" target="_blank"><img src="images/soundcloud.jpeg" class="social-media" alt="soundcloud" id="sc"></a>
             </div>
         </div>
     </footer>
