Added 2nd subpage css and gave further styling to all pages

--- a/vesen-site/08breezy-discography.html
+++ b/vesen-site/08breezy-discography.html
@@ -2,50 +2,111 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles/08breezy.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>08風 Discography</title>
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="logo" class="logo">
-        <nav>
-            <a href="index.html" class="nav">Home</a>
-            <a href="" class="nav">Vesen</a>
-            <a href="" class="nav">08風</a>
-            <a href="" class="nav">All Music</a>
-            <a href="" class="nav">Physicals</a>
-            <a href="" class="nav">Contact</a>
-        </nav>
+        <div class="containter">
+            <img src="images/logo.png" alt="logo" class="logo">
+            <nav>
+                <a href="index.html" class="nav">Home</a>
+                <a href="vesen-discography.html" class="nav">Vesen</a>
+                <a href="08breezy-discography.html" class="nav">08風</a>
+                <a href="" class="nav">All Music</a>
+                <a href="" class="nav">Physicals</a>
+                <a href="" class="nav">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
-        <h1>08風</h1>
+        <h1 id="breezy">08風</h1>
         <section class="album">
             <div class="album-details">
-                <h3>Grove</h3>
-                <img src="images/grove.jpeg" alt="grove album art">
+                <h3 class="title">Lotus Sun</h3>
+                <a href="https://flamingovapor.bandcamp.com/album/lotus-sun"><img src="images/lotus-sun.jpeg" alt="lotus sun album art" class="album-art"></a>
             </div>
         </section>
         <section class="album">
             <div class="album-details">
-                <h3>Lotus Sun</h3>
-                <img src="images/lotus-sun.jpeg" alt="lotus sun album art">
+                <h3 class="title">Demon of the Dreams</h3>
+                <a href="https://nightmaremedley.bandcamp.com/album/demon-of-the-dreams"><img src="images/dotd.jpeg" alt="demon of the dreams album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">Grove</h3>
+                <a href="https://open.spotify.com/album/1w5ocDemMDaZpXekVB6w45?si=rYN8viLsQm-OGie1jYjQ7Q"><img src="images/grove.jpeg" alt="grove album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">Primordia</h3>
+                <a href="https://open.spotify.com/album/2cg9qUJG1HXC7qMx4mAMtj?si=trJXQjKxRYGGQLrVAlLORg"><img src="images/primorida.jpeg" alt="primordia album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">You're Alone</h3>
+                <a href="https://08breezy.bandcamp.com/album/youre-alone"><img src="images/youre-alone.jpeg" alt="you're alone album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">I Can't Help Being In Love With You</h3>
+                <a href="https://flamingovapor.bandcamp.com/album/i-cant-help-being-in-love-with-you"><img src="images/ichbilwy.jpeg" alt="I Can't Help Being In Love With You album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">JOYA</h3>
+                <a href="https://seasidetapes.bandcamp.com/album/joya"><img src="images/joya.jpeg" alt="joya album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">The Lost</h3>
+                <a href="https://nightmaremedley.bandcamp.com/album/the-lost"><img src="images/the-lost.jpeg" alt="the lost album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">Spirits</h3>
+                <a href="https://nightlighttapes.bandcamp.com/album/spirits"><img src="images/spirits.jpeg" alt="spirits album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">我ら</h3>
+                <a href="https://flamingovapor.bandcamp.com/album/--21"><img src="images/we.jpeg" alt="we album art" class="album-art"></a>
+            </div>
+        </section>
+        <section class="album">
+            <div class="album-details">
+                <h3 class="title">夜​の​恐​怖</h3>
+                <a href="https://08breezy.bandcamp.com/album/-"><img src="images/fotn.jpeg" alt="fear of the night album art" class="album-art"></a>
             </div>
         </section>
     </main>
     <footer>
-        <section class="contact">
-        <img src="images/vesen-footer.png" alt="vesen-footer">
-            <p>&#169; 2024, Vesen</p>
-            <a href="">Contact</a>
-            <a href="site-plan.html">Site Plan</a>
-        </section>
-        <section class="social">
-            <img src="images/insta.jpeg" alt="instagram">
-            <img src="images/spotify.jpeg" alt="spotify">
-            <img src="images/Apple_Music_logo.png" alt="apple music">
-            <img src="images/x.webp" alt="x">
-            <img src="images/soundcloud.jpeg" alt="soundcloud">
-        </section>
+        <div class="lunchbox">
+            <div class="contact">
+                <img src="images/vesen-footer.png" alt="vesen-footer">
+                <p class="footer-nav">&#169; 2024, Vesen</p>
+                <a href="" class="footer-nav">Contact</a>
+                <a href="site-plan.html" class="footer-nav">Site Plan</a>
+            </div>
+        </div>
+        <div class="tupperware">
+            <div class="social">
+                <img src="images/insta.jpeg" class="social-media" alt="instagram" id="insta">
+                <a href="https://open.spotify.com/artist/7eFhrORs8kftljzf6ARKkX?si=4qBpV_QRTiCo5wVAAJ-dRA" target="_blank"><img src="images/spotify.jpeg" class="social-media" alt="spotify" id="spotify"></a>
+                <a href="https://music.apple.com/us/artist/vesen/1722644914" target="blank"><img src="images/Apple_Music_logo.png" class="social-media" alt="apple music" id="apple"></a>
+                <a href="https://twitter.com/08bre_ezy" target="_blank"><img src="images/x.webp" class="social-media" alt="x" id="x"></a>
+                <a href="https://soundcloud.com/user-454061104" target="_blank"><img src="images/soundcloud.jpeg" class="social-media" alt="soundcloud" id="sc"></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
