--- a/vesen-site/index.html
+++ b/vesen-site/index.html
@@ -23,20 +23,24 @@
     <main>
         <div class="vesen">
             <h1 class="artist-name">VESEN</h1>
-            <a href="vesen-discography.html"  id="vesen-art">
-                <img src="images/vesen.jpeg" alt="vesen art" class="art">
+            <a href="vesen-discography.html">
+                <img src="images/vesen.jpeg" alt="vesen art" class="art" id="vesen-art">
             </a>
         </div>
         <div class="breezy">
             <h1 class="artist-name">08風</h1>
-            <a href="08breezy-discography.html" id="breezy-art">
-                <img src="images/08breezy.jpeg" alt="08風 art" class="art">
+            <a href="08breezy-discography.html">
+                <img src="images/08breezy.jpeg" alt="08風 art" class="art" id="breezy-art">
             </a>
         </div>
         <div class="about">
             <h3 class="about">About</h3>
             <img src="images/about.jpeg" alt="primordia" class="about-art">
-            <p>Vesen, formerly known as 08風, is an experimental electronic/acoustic ambient artist from the frozen deserts of the western United States. The earliest influences on Vesen's work can be traced back to the internet micro-genre known as dreampunk, with artists such as 2814, HKE, t e l e p a t h, Chungking Mansions, Remember, Facechain, and more serving as his inspiration. Initially attempting to imitate the dreamy, heavy, cyberpunk sound of 2814, he soon found his style and skillset more suited to a spiritual, emotionally charged sound that attempted to paint the beauties of the world around him and the psychological landscapes within. After years of exploring these landscapes, the artist made an official departure from his old "08風" alias and adopted the new "Vesen", signifying his migration from electronic-oriented ambeince into a world of acoustic, yet equally ethereal, sounds. Norwegian for "being", "Vesen" maintains the same surreal approach, but opts for a more wholistic sound, employing a blend of natural string instruments and electronic synthesizers.</p>
+            <div>
+                <p><i>Vesen</i>, formerly known as <i>08風</i>, is an <b>experimental electronic/acoustic ambient artist</b> from the frozen deserts of the western United States. The earliest influences on Vesen's work can be traced back to the internet micro-genre known as <i>dreampunk</i>, with artists such as <i>2814, HKE, t e l e p a t h, Chungking Mansions, Remember, Facechain,</i> and more serving as his inspiration.</p>
+                
+                <p>Initially attempting to imitate the dreamy, heavy, cyberpunk sound of <i>2814</i>, he soon found his style and skillset more suited to a <b>spiritual, emotionally charged</b> sound that attempted to paint the beauties of the world around him and the psychological landscapes within. After years of exploring these landscapes, the artist made an official departure from his old <i>08風</i> alias and adopted the new <i>Vesen</i>, signifying his migration from electronic-oriented ambeince into a world of <b>acoustic</b>, yet equally <b>ethereal</b>, sounds. Norwegian for "being", "Vesen" maintains the same <b>surreal</b> approach, but opts for a more <b>wholistic</b> sound, employing a blend of natural string instruments and electronic synthesizers.</p>
+            </div>
         </div>
     </main>
     <footer>
