--- a/vesen-site/vesen-discography.html
+++ b/vesen-site/vesen-discography.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="logo" class="logo">
-        <nav>
-            <a href="index.html" class="nav">Home</a>
-            <a href="" class="nav">Vesen</a>
-            <a href="" class="nav">08風</a>
-            <a href="" class="nav">All Music</a>
-            <a href="" class="nav">Physicals</a>
-            <a href="" class="nav">Contact</a>
-        </nav>
+        <div class="containter">
+            <img src="images/logo.png" alt="logo" class="logo">
+            <nav>
+                <a href="index.html" class="nav">Home</a>
+                <a href="vesen-discography.html" class="nav">Vesen</a>
+                <a href="08breezy-discography.html" class="nav">08風</a>
+                <a href="" class="nav">All Music</a>
+                <a href="" class="nav">Physicals</a>
+                <a href="" class="nav">Contact</a>
+            </nav>
+        </div>
     </header>
     <main>
         <h1 id="vesen">VESEN</h1>
